--- a/src/Application.Api/Application.Api.csproj
+++ b/src/Application.Api/Application.Api.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Application.Domain\Application.Domain.csproj" />
     <ProjectReference Include="..\Application.Repositories\Application.Repositories.csproj" />
+    <ProjectReference Include="..\Application.Metrics\Application.Metrics.csproj" />
   </ItemGroup>
 
 </Project>
